Fix menu verticall alignement

--- a/_sass/commons/header.sass
+++ b/_sass/commons/header.sass
@@ -10,8 +10,10 @@ body > header
     z-index: 2
     @include media-breakpoint-up(md)
         padding-top: $grid-gutter * 2
-        &.menu_burger_only_mobile
+        &.menu-burger-only-mobile
             margin-top: -3px
+            nav
+                margin-top: -3px
     a
         text-decoration: none
         // Logo
@@ -30,8 +32,12 @@ body > header
             flex-shrink: 0
             font-size: px2rem(25)
             margin-left: $grid-gutter
-            margin-top: -2px
+            margin-top: -4px
             vertical-align: middle
+            @media (max-width: 350px)
+                font-size: px2rem(20)
+                margin-left: 15px
+
         @include media-breakpoint-up(lg)
             width: calc(8.3333% + 9px)
             img
